--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,14 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    # ports:
+    #   - 8080:8080
+    #   - 50000:50000
+  nginx:
+    image: nginx:1.25.3
     ports:
-      - 8080:8080
-      - 50000:50000
+      - 80:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - jenkins
