--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,11 @@ upstream jenkins {
     server jenkins:8080;  # jenkins container ip and port
 }
 
+upstream cadvisor {
+    keepalive 32;              # keepalive connections
+    server cadvisor:8080;  # cadvisor container ip and port
+}
+
 # local
 
 server {
@@ -31,6 +36,24 @@ server {
         proxy_set_header Connection ""; # Clear for keepalive
     }
 
+    # location /stats/ {
+    location  ~  ^/stats(?<requesturi>.*) {
+        sendfile off;
+        proxy_pass     http://cadvisor$requesturi;
+        proxy_redirect ~^(/.*) /stats$1;
+        proxy_http_version 1.1;
+
+        # this is the maximum upload size
+        client_max_body_size       10m;
+        client_body_buffer_size    128k;
+
+        proxy_connect_timeout      90;
+        proxy_send_timeout         90;
+        proxy_read_timeout         90;
+        proxy_buffering            off;
+        proxy_request_buffering    off; # Required for HTTP CLI commands
+        proxy_set_header Connection ""; # Clear for keepalive
+    }
 }
 
 # production
