add prometheus scrape urls to nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,7 @@ server {
     access_log      /var/log/nginx/jenkins.access.log;
     error_log       /var/log/nginx/jenkins.error.log;
 
+    # prometheus stats available at http://localhost/prometheus/
     location / {
         sendfile off;
         proxy_pass         http://jenkins;
@@ -36,11 +37,11 @@ server {
         proxy_set_header Connection ""; # Clear for keepalive
     }
 
-    # location /stats/ {
-    location  ~  ^/stats(?<requesturi>.*) {
+    # prometheus stats available at http://localhost/cadvisor/metrics
+    location  ~  ^/cadvisor(?<requesturi>.*) {
         sendfile off;
         proxy_pass     http://cadvisor$requesturi;
-        proxy_redirect ~^(/.*) /stats$1;
+        proxy_redirect ~^(/.*) /cadvisor$1;
         proxy_http_version 1.1;
 
         # this is the maximum upload size
