add node-exporter, scrape it, only jenkins & prometheus accessible via nginx, force recreate, add prometheus plugin config to casc

--- a/jenkins/casc.yml
+++ b/jenkins/casc.yml
@@ -1,2 +1,16 @@
 jenkins:
   authorizationStrategy: unsecured
+unclassified:
+  prometheusConfiguration:
+    path: "jenkins_metrics"
+    collectingMetricsPeriodInSeconds: 15
+    jobAttributeName: "job"
+    defaultNamespace: "default"
+    countAbortedBuilds: true
+    countFailedBuilds: true
+    countNotBuiltBuilds: true
+    countSuccessfulBuilds: true
+    countUnstableBuilds: true
+    fetchTestResults: true
+    processingDisabledBuilds: countFailedBuild
+    useAuthenticatedEndpoint: false
