--- a/nginx.conf
+++ b/nginx.conf
@@ -3,15 +3,11 @@ upstream jenkins {
     server jenkins:8080;  # jenkins container ip and port
 }
 
-upstream cadvisor {
-    keepalive 32;              # keepalive connections
-    server cadvisor:8080;  # cadvisor container ip and port
-}
-
 upstream prometheus {
     keepalive 32;              # keepalive connections
     server prometheus:9090;  # prometheus container ip and port
 }
+
 # local
 
 server {
@@ -41,11 +37,9 @@ server {
         proxy_set_header Connection ""; # Clear for keepalive
     }
 
-    # prometheus stats available at http://localhost/cadvisor/metrics
-    location  ~  ^/cadvisor(?<requesturi>.*) {
+    location /prometheus/ {
         sendfile off;
-        proxy_pass     http://cadvisor$requesturi;
-        proxy_redirect ~^(/.*) /cadvisor$1;
+        proxy_pass     http://prometheus;
         proxy_http_version 1.1;
 
         # this is the maximum upload size
@@ -60,24 +54,6 @@ server {
         proxy_set_header Connection ""; # Clear for keepalive
     }
 
-    # prometheus stats available at http://localhost/cadvisor/metrics
-    location  ~  ^/prometheus(?<requesturi>.*) {
-        sendfile off;
-        proxy_pass     http://prometheus$requesturi;
-        proxy_redirect ~^(/.*) /test$1;
-        proxy_http_version 1.1;
-
-        # this is the maximum upload size
-        client_max_body_size       10m;
-        client_body_buffer_size    128k;
-
-        proxy_connect_timeout      90;
-        proxy_send_timeout         90;
-        proxy_read_timeout         90;
-        proxy_buffering            off;
-        proxy_request_buffering    off; # Required for HTTP CLI commands
-        proxy_set_header Connection ""; # Clear for keepalive
-    }
 }
 
 # production
