--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,4 @@
 services:
-  jenkins:
-    container_name: jenkins
-    build:
-      context: ./jenkins/
-      dockerfile: ./Dockerfile
-    ports:
-      - 50000:50000 # Jenkins agent port
-    environment:
-      - "PROMETHEUS_ENDPOINT=/jenkins_metrics/"
   nginx:
     container_name: nginx
     image: nginx:1.25.3
@@ -17,6 +8,23 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - jenkins
+      - cadvisor
+      - prometheus
+      - node-exporter
+
+  jenkins:
+    container_name: jenkins
+    build:
+      context: ./jenkins/
+      dockerfile: ./Dockerfile
+    ports:
+      - 50000:50000 # Jenkins agent port
+    environment:
+      JAVA_OPTS: "-Djenkins.install.runSetupWizard=false"
+    volumes:
+      - jenkins_data:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+
   cadvisor:
     container_name: cadvisor
     image: gcr.io/cadvisor/cadvisor:v0.47.2
@@ -27,12 +35,33 @@ services:
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
       - /dev/disk/:/dev/disk:ro
+
+  node-exporter:
+    container_name: node-node_exporter
+    image: prom/node-exporter:v1.7.0
+    command:
+      - --web.telemetry-path=/metrics
+    pid: host
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+
   prometheus:
     container_name: prometheus
     image: prom/prometheus:v2.49.1
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --web.external-url=/prometheus/
+      # - --web.route-prefix=/prometheus/
+      - --storage.tsdb.path=/prometheus
+      - --storage.tsdb.retention.time=15d
+      - --storage.tsdb.retention.size=15GB
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
 
 volumes:
+  jenkins_data: {}
   prometheus_data: {}
+  alertmanager_data: {}
