--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -7,6 +7,7 @@ global:
 rule_files:
 scrape_configs:
   - job_name: 'prometheus'
+    metrics_path: '/prometheus/metrics'
     static_configs:
       - targets: ['localhost:9090']
         labels:
